Nav overflow fix on mobile pt 16

--- a/blocks/src/blocks/mobile-container/style.scss
+++ b/blocks/src/blocks/mobile-container/style.scss
@@ -110,6 +110,7 @@
     @media (max-width: 768px) {
         overflow-y: scroll;
         height: 100vh;
+        height: 100dvh;
     }
 }
 
